# SAP-Coherence-Checker-Evidence-Gap-Engine

./: .env.example  .gitignore  LICENSE  README.md  create_gold_standard.py  pyproject.toml  requirements.txt  run_dashboard.ps1  run_pipeline.py
data/gold_standard/: gold_standard.csv  inter_rater_review.csv
data/outputs/: effect_measures.json  linked_trials.csv  matched_trials.csv  scorecard.csv  trials.csv
src/: __init__.py
src/dashboard/: app.py  helpers.py
src/dashboard/www/: style.css
src/models/: decision_log.py  linkage_log.py  schemas.py
src/pipeline/: article_classifier.py  config.py  hr_extractor.py  module1_linker.py  module2_endpoint_matcher.py  module3_bayesian.py  module4_power_audit.py  pubmed_client.py  scorecard.py  validation.py
tests/: test_dashboard_helpers.py  test_decision_log.py  test_module2_endpoint_matcher.py  test_power_audit.py  test_schemas.py  test_validation.py
