[project]
name = "sap-coherence-checker"
version = "2.0.0"
description = "SAP Coherence Checker & Evidence Gap Engine — Human-in-the-Loop Edition"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
omit = ["src/dashboard/*"]
